Mejora en manejo de excepciones